Change status to Submitted and add GC commands
Updated the current status and added commands for different garbage collectors.